--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
     <h1>hello</h1>
     <h2>Erster commit</h2>
     <h3>Zweiter Commit</h3>
-    <h4>Changed in Github</4>
+    <h4>Changed in Github</h4>
 </body>
 
 </html>
